--- a/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
@@ -149,7 +149,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
 
 \begin{itemize}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 14 días} (IA-14): Casos confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en 14 días} (IA-14): casos confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
@@ -158,7 +158,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-14}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): Casos confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): casos confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
@@ -167,7 +167,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-7}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): Casos en población superior a 65 años confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): casos en población superior a 65 años confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     \newpage
     \begin{figure}[!h]
       \centering
@@ -176,7 +176,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-14 65}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): Casos en población superior a 65 años confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): casos en población superior a 65 años confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
@@ -185,7 +185,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-7 65}
     \end{figure}
 
-    \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): Número de pruebas con resultado positivo en 7 días *100 / Número de pruebas realizadas en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{PDIA} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): porcentaje de pruebas con resultado positivo en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{PDIA} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
@@ -194,16 +194,16 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{PDIA}
     \end{figure}
 
-    \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): Número de camas de cuidados críticos ocupadas por casos de COVID / Número de camas de cuidados críticos totales en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{UCI} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): proporción de camas de cuidados críticos ocupadas por casos de COVID. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{cUCI} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/camas_UCI.png}
       \caption{UCI}
-      \label{UCI}
+      \label{cUCI}
     \end{figure}
 
-    \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas):  Número de camas de hospitalización ocupadas por casos de COVID / Número total de camas de hospitalización en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{Camas} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas): proporción de camas de hospitalización ocupadas por casos de COVID. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo}, \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{Camas} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
@@ -216,17 +216,18 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
 
 \subsection{Variable de salida}
 
-Se establece como variable de salida el hecho de confinar o no una población en función de tres niveles diferenciados. \textit{No confinar, Considerar el confinamiento y Sí confinar}. Se hace hincapié en el sentido del valor \textit{Considerar el confinamiento} que indica a los responsables de confinar un territorio que sería recomendable hacerlo atendiendo únicamente a razones sanitarias, pero que existe capacidad de discusión de otro tipo de medidas que no perjudiquen en esa medida a los sectores productivos de la población.  La figura 7 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+Se establece como variable de salida el hecho de confinar o no una población en función de tres niveles diferenciados. \textit{No confinar, Considerar el confinamiento y Sí confinar}. Se hace hincapié en el sentido del valor \textit{Considerar el confinamiento} que indica a los responsables de confinar un territorio que sería recomendable hacerlo atendiendo únicamente a razones sanitarias, pero que existe capacidad de discusión de otro tipo de medidas que no perjudiquen en esa medida a los sectores productivos de la población. La figura~\ref{Confinar} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
 \begin{figure}[!h]
   \centering
   \includegraphics[width=300px]{img/confinar.png}
   \caption{Confinar}
+  \label{Confinar}
 \end{figure}
-
+\newpage
 \subsection{Reglas}
 
-Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \textit{OR}. Pese a que las variables escogidas han sido selecionadas en conformidad a los criterios establecidos en la \textit{Estrategia Nacional para la COVID-19 del Gobierno del Reino de España} \cite{poblacion}, las reglas mostradas son de elaboración propia dado que el documento del gobierno no proporciona criterios relativos al confinamiento de los distintos territorios.
+Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \textit{OR}. Pese a que las variables escogidas han sido selecionadas en conformidad a los criterios establecidos en la \textit{Estrategia Nacional para la COVID-19 del Gobierno de España} \cite{poblacion}, las reglas mostradas son de elaboración propia dado que el documento del gobierno no proporciona criterios relativos al confinamiento de los distintos territorios.
 
 \begin{figure}[!h]
   \centering
@@ -234,7 +235,7 @@ Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \tex
   \cline{2-9}
                                 & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Confinar} \\ \hline
 \multicolumn{1}{|c|}{Regla 1} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular}& Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 2} & Medio & Medio & - & - & - & - & Alto & Si \\ \hline
+\multicolumn{1}{|c|}{Regla 2} & Medio & Medio & - & - & - & - & Alto & Sí \\ \hline
 \multicolumn{1}{|c|}{Regla 3} & Alto & Alto & Alto & Alto & Alto & Alto & Alto & Sí \\ \hline
 \multicolumn{1}{|c|}{Regla 4} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & No \\ \hline
 \multicolumn{1}{|c|}{Regla 5} & Bajo & Alto & - & - & - & - & - & Sí \\ \hline
@@ -251,7 +252,7 @@ Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \tex
 \caption{Reglas del Sistema Borroso del Confinamiento}
 \end{figure}
 
-
+\clearpage
 
 \section{Sistema borroso: Prueba PCR}
 
@@ -259,7 +260,7 @@ Este segundo sistema basado en lógica borrosa debe decidir si dado un paciente,
 
 \vspace{2mm}
 
-Un sistema que consiga resolver este problema de forma eficaz sería de gran ayuda en los centros médicos, ya que aliviaría la carga de trabajo de los médicos y sería de utilidad a la hora de tomar decisiones sobre clasos inconcluyentes.
+Un sistema que consiga resolver este problema de forma eficaz sería de gran ayuda en los centros médicos, ya que aliviaría la carga de trabajo de los médicos y sería de utilidad a la hora de tomar decisiones sobre casos inconcluyentes.
 
 
 \subsection{Variables de entrada}
@@ -286,6 +287,8 @@ Las entradas del sistema seleccionadas son:
   \end{figure}
 
   \item \textbf{PCR} figura~\ref{PCR}: si el paciente ha dado positivo o negativo en una prueba PCR, al igual que en la variable anterior, sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna PCR se representará con un 0,5.
+
+  \clearpage
 
   \begin{figure}[!h]
       \centering
@@ -323,6 +326,8 @@ Las entradas del sistema seleccionadas son:
 
   \item \textbf{Síntomas} figura~\ref{Sintomas}: indica el número de síntomas de \textit{COVID-19} que tiene el paciente. Puede tomar valores de \textit{Ninguno}, \textit{Alguno}, \textit{Varios} y \textit{Todos}.
 
+  \clearpage
+
   \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/sintomas.png}
@@ -354,14 +359,14 @@ Como la decisión a tomar es si se debe realizar o no una prueba PCR, la salida 
     \label{realizarPCR}
 \end{figure}
 
-
+\newpage
 
 \subsection{Reglas}
 
 Todas las reglas son del tipo \textit{AND}. Para las 7 primeras reglas se ha tomado como referencia la información del \textit{Ministerio de Sanidad}\cite{paciente}, las siguientes son creadas bajo el criterio de los autores con el fin de completar la funcionalidad del sistema.
 
 \begin{figure}[!h]
-  \begin{adjustwidth}{-1.3cm}{}
+  \begin{adjustwidth}{-1.4cm}{}
 \begin{tabular}{c|c|c|c|c|c|c|c|c|c|}
   \cline{2-10}
                                 & DDPS & \begin{tabular}[c]{@{}c@{}}Prueba\\ Rápida\end{tabular} & PCR & UCI & \begin{tabular}[c]{@{}c@{}}Sospecha\\ Clínica\end{tabular} & DDCP & Síntomas & UMNC & \begin{tabular}[c]{@{}c@{}}\textbf{Realizar}\\ \textbf{PCR}\end{tabular} \\ \hline
@@ -371,7 +376,7 @@ Todas las reglas son del tipo \textit{AND}. Para las 7 primeras reglas se ha tom
 \multicolumn{1}{|c|}{Regla 4} & \textit{Not} Pocos & No & - & - & - & - & - & - & Sí \\ \hline
 \multicolumn{1}{|c|}{Regla 5} & - & - & Sí & - & - & - & - & - & Sí \\ \hline
 \multicolumn{1}{|c|}{Regla 6} & - & - & - & - & - & Muchos & Ninguno & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 7} & - & - & - & - & - & \textit{Not} Mucho & Ninguno & Sí & No \\ \hline
+\multicolumn{1}{|c|}{Regla 7} & - & - & - & - & - & \textit{Not} Muchos & Ninguno & Sí & No \\ \hline
 \multicolumn{1}{|c|}{Regla 8} & Pocos & - & - & - & \textit{Not} Alta & - & - & - & No \\ \hline
 \multicolumn{1}{|c|}{Regla 9} & - & Sí & - & - & Baja & - & - & - & Sí \\ \hline
 \multicolumn{1}{|c|}{Regla 10} & - & - & - & - & - & \textit{Not} Muchos & \textit{Not} Ninguno & No & Sí \\ \hline
@@ -385,16 +390,16 @@ Todas las reglas son del tipo \textit{AND}. Para las 7 primeras reglas se ha tom
 \end{figure}
 
 
-
-
+\newpage
 
 \section{Validación del sistema}
 
-Para la realización de las pruebas, inicialmente, se deseaba encontrar información real de diferentes localidades\cite{cant, cana} y pacientes. Por desgracia, no se encontraron suficientes datos que fueran representativos. Por ello, fue necesario probar los sitemas con casos elaborados por los autores, de forma que se intentaba comprobar la robustez de los sistemas.
+Para la realización de las pruebas, inicialmente, se deseaba encontrar información real de diferentes localidades\cite{cant, cana} y pacientes. Por desgracia, no se encontraron suficientes datos que fueran representativos. Por ello, fue necesario probar los sistemas con casos elaborados por los autores, de forma que se intentaba comprobar la robustez de los sistemas.
 
 \vspace{3mm}
 
 Para la elección de las pruebas se ha optado en primera instancia por evaluar los sistemas con pruebas donde las variables pertenecen al mismo nivel. Más tarde, se ha probado a evaluar al sistema con mezcla de valores de distintos niveles, para comprobar el comportamiento de los sistemas con diferentes tipos de complejidad.
+
   \subsection{Confinamiento}
 
     \begin{figure}[!h]
@@ -416,7 +421,6 @@ Para la elección de las pruebas se ha optado en primera instancia por evaluar l
     \caption{Pruebas Básica del Sistema Borroso del Confinamiento}
   \end{figure}
 
-    \vspace{2mm}
 
     \begin{figure}[!h]
       \centering
@@ -429,6 +433,8 @@ Para la elección de las pruebas se ha optado en primera instancia por evaluar l
     \end{tabular}
     \caption{Pruebas Mixtas del Sistema Borroso del Confinamiento}
   \end{figure}
+
+  \newpage
 
   \subsection{Prueba PCR}
 
@@ -464,22 +470,33 @@ Para la elección de las pruebas se ha optado en primera instancia por evaluar l
     \caption{Pruebas del Sistema Borroso del PCR}
   \end{figure}
 
+  \newpage
+
   \subsection{Analisis de los resultados}
 
-  Respecto a la primera serie de pruebas realizadas sobre el sistema que trata de determinar el confinamiento de un determinado territorio se observa que las pruebas básicas arrojan buenos resultados puesto que se mantiene cada nivel previsto en relación a los niveles en los que se encuentran las variables de entradada. Este hecho nos da una primera aproximación que nos permite determinar que no hay fallos graves o incongruencias entre las distintas reglas. Por su parte, y para asegurar que el sistema funciona de manera adecuada incluso cuando determinar el nivel de confinamiento no resulta una tarea clara, habiendo variables de entrada en unos niveles mientras que otras se encuentran en unos niveles diferentes, una prueba que se asemeja más a los casos reales. Se observa cómo elresultado obtenido sigue un criterio en todos los casos, por lo que se asegura que el sistema funciona de manera adecuada.
+  Respecto a la primera serie de pruebas realizadas sobre el sistema que trata de determinar el confinamiento de un determinado territorio, se observa que las pruebas básicas arrojan buenos resultados, puesto que se mantiene cada nivel previsto en relación a los niveles en los que se encuentran las variables de entrada. Este hecho aporta una primera aproximación que permite determinar que no hay fallos graves o incongruencias entre las distintas reglas.
 
   \vspace{2mm}
 
-  Finalmente en la segunda serie de pruebas se obtienen resultados similares al determinarse que la necesidad de una prueba PCR aumenta de forma gradual en los 10 primeros casos, los cuales estan construidos de manera que la gravedad se va incrementando.
+  Por su parte, y para asegurar que el sistema funciona de manera adecuada incluso cuando determinar el nivel de confinamiento no resulta una tarea sencilla (cuando hay variables de entrada en unos niveles y otras en niveles diferentes), se ve que con pruebas que se asemejan más a casos reales, el resultado obtenido sigue el mismo criterio, por lo que se puede asegurar que el sistema funciona de manera adecuada.
 
+  \vspace{4mm}
+
+  En la segunda serie de pruebas se obtienen resultados similares al determinarse que la necesidad de una prueba PCR aumenta de forma gradual en los 10 primeros casos, los cuales están construidos de manera que la gravedad se va incrementando. Adicionalmente, a partir de la prueba número 10 se pueden catalogar como exitosos los resultados puesto que la mayoría de pacientes necesita una prueba PRC y se distingue correctamente cómo de urgente es realizarla o si puede esperar, puesto que se debe recordar que un valor superior a 0.5 implica que se necesita una prueba PCR, pero, cuánto más elevado sea este valor, más urgente será la realización de la prueba.
+
+  \vspace{5mm}
+
+  Pese a que se ha determinado que los resultados obtenidos son moderadamente buenos, existe margen de mejora. Sería necesario para ello estudiar más en profundidad los distintos casos posibles con ayuda de especialistas o expertos para aumentar el número de reglas, contemplar un mayor número de ejemplos, ajustar mejor los límites de los conjuntos borrosos para aumentar así la precisión del sistema.
+
+\newpage
 
 \section{Conclusiones}
 
-  A lo largo del desarrollo de esta práctica se ha profundizado en la técnica de \textit{Lógica Difusa}, la misma presenta un enfoque bien diferenciado de otras técnicas de Inteligencia Artificial, puesto que permite la resolución de problemas para los cuales no existe una alternativa eficiente que sea \textbf{capaz de trabajar con la incertidumbre humana}. Por todo ello, esta práctica resulta de utilidad si se pretende introducirse en ese mundo de manera sucinta. Sin embargo, también impone la resolución de unos retos que deben ser solucionados si se pretende afrontar aplicaciones reales.
+  A lo largo del desarrollo de esta práctica se ha profundizado en la técnica de \textit{Lógica Difusa}, que presenta un enfoque muy diferenciado de otras técnicas de Inteligencia Artificial, puesto que permite la resolución de problemas para los cuales no existe una alternativa eficiente que sea \textbf{capaz de trabajar con la incertidumbre humana}. Por todo ello, esta práctica resulta de utilidad si se pretende introducirse en ese mundo de manera sucinta. Sin embargo, también impone la resolución de unos retos que deben ser solucionados si se pretende afrontar aplicaciones reales.
 
   \vspace{2mm}
 
-  Entre las principales desventajas o retos que acarrea esta técnica está la \textbf{dificultad de establecer reglas} exactas así como los distintos intervalos de cada una de las variables para disponer de un sistema lo más fiel posible. Esto es así debido a las propias características de la lógica difusa, puesto que al ser capaz de trabajar con la incertidumbre humana pierde la capacidad de detectar patrones inadvertidos a los humanos como sí pueden encontrar, por ejemplo, las redes de neuronas.
+  Entre las principales desventajas o retos que acarrea esta técnica está la \textbf{dificultad de establecer reglas} exactas, así como los distintos intervalos de cada una de las variables para disponer de un sistema lo más fiel posible. Esto es así debido a las propias características de la lógica difusa, puesto que al ser capaz de trabajar con la incertidumbre humana pierde la capacidad de detectar patrones inadvertidos a los humanos como sí pueden encontrar, por ejemplo, las redes de neuronas.
 
   \vspace{2mm}
 
@@ -488,11 +505,11 @@ Para la elección de las pruebas se ha optado en primera instancia por evaluar l
 
   \vspace{2mm}
 
-  A pesar de sus múltiples desventajas,la lógica difusa es una técnica especialmente útil especialmente si se contrasta con otras técnicas conocidas como caja negra, es \textbf{extremadamente fácil obtener explicaciones} sobre los resultados en base a las reglas activadas.
+  A pesar de sus múltiples desventajas, la lógica difusa es una técnica especialmente útil sobre todo si se contrasta con otras técnicas conocidas como caja negra, es \textbf{fácil obtener explicaciones} sobre los resultados en base a las reglas activadas.
 
-  \vspace{2mm}
+  \vspace{3mm}
 
-  A modo de conclusión se destaca la importancia de disponer de distintas herramientas de Inteligencia Artificial que permitan su aplicación en situaciones bien diferenciadas, permitiendo de esta manera seleccionar la técnica que mejor se adapte a lo que se pretende obtener en cada momento. Puesto que no existen técnicas universales la tarea de un ingeniero experto en Inteligencia Artificial debe ser la seleccionar el conjunto de técnicas que mejor funcione en cada momento.
+  A modo de conclusión se destaca la importancia de disponer de distintas herramientas de inteligencia artificial que permitan su aplicación en situaciones bien diferenciadas, permitiendo de esta manera seleccionar la técnica que mejor se adapte a lo que se pretende obtener en cada momento. Puesto que no existen técnicas universales, la tarea de un ingeniero experto en inteligencia artificial debe ser la de seleccionar el conjunto de técnicas que mejor funcione para cada problema.
 
 \clearpage
 
