CSV partFin preprocesado

--- a/PracticaFinal/codigo/Preproceso.ipynb
+++ b/PracticaFinal/codigo/Preproceso.ipynb
@@ -345,14 +345,17 @@
     "for desc, genres in data[[\"book_desc\", \"genres\"]].values:\n",
     "    try:\n",
     "        if detect(desc) == 'en':\n",
+    "            desc = desc.replace('\\n', ' ')\n",
+    "            desc = desc.lower()\n",
     "            newData.append([desc, genres.split('|')[0]])\n",
+    "            \n",
     "    except:\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -392,27 +395,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Winning will make you famous. Losing means cer...</td>\n",
+       "      <td>winning will make you famous. losing means cer...</td>\n",
        "      <td>Young Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>There is a door at the end of a silent corrido...</td>\n",
+       "      <td>there is a door at the end of a silent corrido...</td>\n",
        "      <td>Fantasy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>The unforgettable novel of a childhood in a sl...</td>\n",
+       "      <td>the unforgettable novel of a childhood in a sl...</td>\n",
        "      <td>Classics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>About three things I was absolutely positive.F...</td>\n",
+       "      <td>about three things i was absolutely positive.f...</td>\n",
        "      <td>Young Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Trying to make sense of the horrors of World W...</td>\n",
+       "      <td>trying to make sense of the horrors of world w...</td>\n",
        "      <td>Historical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -421,53 +424,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43790</th>\n",
-       "      <td>Avi Steinberg is stumped. After defecting from...</td>\n",
+       "      <th>43794</th>\n",
+       "      <td>avi steinberg is stumped. after defecting from...</td>\n",
        "      <td>Nonfiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43791</th>\n",
-       "      <td>In this fearless and half-crazy story, Howard ...</td>\n",
+       "      <th>43795</th>\n",
+       "      <td>in this fearless and half-crazy story, howard ...</td>\n",
        "      <td>Sports</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43792</th>\n",
-       "      <td>From the icons of the game to the players who ...</td>\n",
+       "      <th>43796</th>\n",
+       "      <td>from the icons of the game to the players who ...</td>\n",
        "      <td>Nonfiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43793</th>\n",
-       "      <td>Soon to be a major motion picture, from Brad P...</td>\n",
+       "      <th>43797</th>\n",
+       "      <td>soon to be a major motion picture, from brad p...</td>\n",
        "      <td>Nonfiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43794</th>\n",
-       "      <td>The Anthology and the Rise of the Novel brings...</td>\n",
+       "      <th>43798</th>\n",
+       "      <td>the anthology and the rise of the novel brings...</td>\n",
        "      <td>Criticism</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>43795 rows × 2 columns</p>\n",
+       "<p>43799 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                             Description   Main Genre\n",
-       "0      Winning will make you famous. Losing means cer...  Young Adult\n",
-       "1      There is a door at the end of a silent corrido...      Fantasy\n",
-       "2      The unforgettable novel of a childhood in a sl...     Classics\n",
-       "3      About three things I was absolutely positive.F...  Young Adult\n",
-       "4      Trying to make sense of the horrors of World W...   Historical\n",
+       "0      winning will make you famous. losing means cer...  Young Adult\n",
+       "1      there is a door at the end of a silent corrido...      Fantasy\n",
+       "2      the unforgettable novel of a childhood in a sl...     Classics\n",
+       "3      about three things i was absolutely positive.f...  Young Adult\n",
+       "4      trying to make sense of the horrors of world w...   Historical\n",
        "...                                                  ...          ...\n",
-       "43790  Avi Steinberg is stumped. After defecting from...   Nonfiction\n",
-       "43791  In this fearless and half-crazy story, Howard ...       Sports\n",
-       "43792  From the icons of the game to the players who ...   Nonfiction\n",
-       "43793  Soon to be a major motion picture, from Brad P...   Nonfiction\n",
-       "43794  The Anthology and the Rise of the Novel brings...    Criticism\n",
+       "43794  avi steinberg is stumped. after defecting from...   Nonfiction\n",
+       "43795  in this fearless and half-crazy story, howard ...       Sports\n",
+       "43796  from the icons of the game to the players who ...   Nonfiction\n",
+       "43797  soon to be a major motion picture, from brad p...   Nonfiction\n",
+       "43798  the anthology and the rise of the novel brings...    Criticism\n",
        "\n",
-       "[43795 rows x 2 columns]"
+       "[43799 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,16 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(43795, 2)"
+       "(43799, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +510,7 @@
        "(194,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
