arreglo csv datos

--- a/PracticaFinal/codigo/Preproceso.ipynb
+++ b/PracticaFinal/codigo/Preproceso.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +346,9 @@
     "    try:\n",
     "        if detect(desc) == 'en':\n",
     "            desc = desc.replace('\\n', ' ')\n",
+    "            desc = desc.replace('\\t', ' ')\n",
+    "            desc = desc.replace('\\r', ' ')\n",
+    "            desc = desc.replace('<br>', ' ')\n",
     "            desc = desc.lower()\n",
     "            newData.append([desc, genres.split('|')[0]])\n",
     "            \n",
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,168 +367,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Main Genre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>winning will make you famous. losing means cer...</td>\n",
-       "      <td>Young Adult</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>there is a door at the end of a silent corrido...</td>\n",
-       "      <td>Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>the unforgettable novel of a childhood in a sl...</td>\n",
-       "      <td>Classics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>about three things i was absolutely positive.f...</td>\n",
-       "      <td>Young Adult</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>trying to make sense of the horrors of world w...</td>\n",
-       "      <td>Historical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43794</th>\n",
-       "      <td>avi steinberg is stumped. after defecting from...</td>\n",
-       "      <td>Nonfiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43795</th>\n",
-       "      <td>in this fearless and half-crazy story, howard ...</td>\n",
-       "      <td>Sports</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43796</th>\n",
-       "      <td>from the icons of the game to the players who ...</td>\n",
-       "      <td>Nonfiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43797</th>\n",
-       "      <td>soon to be a major motion picture, from brad p...</td>\n",
-       "      <td>Nonfiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43798</th>\n",
-       "      <td>the anthology and the rise of the novel brings...</td>\n",
-       "      <td>Criticism</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>43799 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             Description   Main Genre\n",
-       "0      winning will make you famous. losing means cer...  Young Adult\n",
-       "1      there is a door at the end of a silent corrido...      Fantasy\n",
-       "2      the unforgettable novel of a childhood in a sl...     Classics\n",
-       "3      about three things i was absolutely positive.f...  Young Adult\n",
-       "4      trying to make sense of the horrors of world w...   Historical\n",
-       "...                                                  ...          ...\n",
-       "43794  avi steinberg is stumped. after defecting from...   Nonfiction\n",
-       "43795  in this fearless and half-crazy story, howard ...       Sports\n",
-       "43796  from the icons of the game to the players who ...   Nonfiction\n",
-       "43797  soon to be a major motion picture, from brad p...   Nonfiction\n",
-       "43798  the anthology and the rise of the novel brings...    Criticism\n",
-       "\n",
-       "[43799 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "newData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(43799, 2)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "newData.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(194,)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "newData[\"Main Genre\"].unique().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "newData.to_csv(\"./datos/datos_p1.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(\"./datos/datos_p1.csv\")"
    ]
   }
  ],
